[package]
name = "wxkefu-rs"
version = "0.1.0"
edition = "2024"


[dependencies]
reqwest = { version = "0.12", features = ["gzip", "json"] }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tower = "0.5"
tower-http = { version = "0.6",  features = ["trace"], optional = true }
dashmap = "6.1"
tokio-stream = "0.1"
lru = "0.16"
bytes = "1"
async-trait = "0.1"
quick-xml = { version = "0.38", optional = true }
