[package]
name = "wxkefu-rs"
version = "0.1.0"
edition = "2024"


[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["gzip", "json"] }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tower = "0.5"
tower-http = { version = "0.6",  features = ["trace"], optional = true }
dashmap = "6.1"
tokio-stream = "0.1"
lru = "0.16"
bytes = "1"
async-trait = "0.1"
quick-xml = { version = "0.38", optional = true }
anyhow = "1.0"

# Crypto for Kf callback verification and message decryption
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
sha1 = "0.10"
base64 = "0.22"

[dev-dependencies]
axum = { version = "0.8", features = ["json"] }
