[package]
name = "wxkefu-rs"
version = "0.1.1"
edition = "2024"

description = "WeChat Customer Service (WeCom Kf) client for Rust: token, encrypted callback, message sync/send, media, welcome, recall, customer profiles, and Kf account management."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/your-org-or-user/wxkefu-rs"
homepage = "https://github.com/your-org-or-user/wxkefu-rs"
documentation = "https://docs.rs/wxkefu-rs"
keywords = ["wechat", "wecom", "kf", "customer-service", "wx"]
categories = ["api-bindings", "web-programming::http-client"]

include = [
  "/src/**",
  "/Cargo.toml",
  "/README*",
  "/LICENSE*",
  "/examples/**",
  "/docs/**",
]


[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["gzip", "json"] }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tower = "0.5"
tower-http = { version = "0.6",  features = ["trace"], optional = true }
dashmap = "6.1"
tokio-stream = "0.1"
lru = "0.16"
bytes = "1"
async-trait = "0.1"
quick-xml = { version = "0.38", features = ["serialize"] }
anyhow = "1.0"
tracing-subscriber = "0.3"

# Crypto for Kf callback verification and message decryption
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
sha1 = "0.10"
base64 = "0.22"
generic-array = "1.3"

[dev-dependencies]
axum = { version = "0.8", features = ["json"] }
